# RulesMCP

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
rules_mcp/: __main__.py  registry.py  repo.py  server.py
rules_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
