[project]
name = "rules-mcp"
version = "0.1.0"
description = "MCP server for AI coding rules — Python, JS, CSS, C++, Rust, Kotlin standards"
requires-python = ">=3.11"
license = "EUPL-1.2"
authors = [{ name = "lpmwfx" }]
readme = "README.md"
dependencies = [
    "fastmcp>=2.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
rules-mcp = "rules_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rules_mcp*"]
